--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -46,7 +46,7 @@
 <span class="kn">import</span> <span class="nn">abc</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
-<span class="kn">import</span> <span class="nn">pydicom</span> <span class="k">as</span> <span class="nn">pydicom</span>
+<span class="kn">import</span> <span class="nn">pydicom</span>
 <span class="kn">import</span> <span class="nn">urllib3</span>
 
 <span class="kn">from</span> <span class="nn">copyxnat.xnat.xml_cleaner</span> <span class="kn">import</span> <span class="n">XmlCleaner</span><span class="p">,</span> <span class="n">XnatType</span>
