--- a/_modules/copyxnat/commands/copy_command.html
+++ b/_modules/copyxnat/commands/copy_command.html
@@ -95,7 +95,7 @@
             <span class="n">dry_run</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">dry_run</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_recurse</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">to_children</span><span class="o">=</span><span class="n">dst_copy</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="ow">not</span> <span class="n">missing_session_type</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">dst_copy</span> <span class="ow">and</span> <span class="ow">not</span> <span class="n">missing_session_type</span><span class="p">:</span>
             <span class="n">dst_copy</span><span class="o">.</span><span class="n">post_create</span><span class="p">()</span></div>
 </pre></div>
 
