--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -262,16 +262,17 @@
         <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">both</span><span class="p">:</span>
             <span class="n">src_value</span> <span class="o">=</span> <span class="n">src</span><span class="p">[</span><span class="n">key</span><span class="p">]</span>
             <span class="n">dst_value</span> <span class="o">=</span> <span class="n">dst</span><span class="p">[</span><span class="n">key</span><span class="p">]</span>
-            <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">src_value</span><span class="p">,</span> <span class="nb">dict</span><span class="p">):</span>
+            <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">src_value</span><span class="p">,</span> <span class="nb">dict</span><span class="p">)</span> <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">dst_value</span><span class="p">,</span> <span class="nb">dict</span><span class="p">):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_compare_dicts</span><span class="p">(</span>
                     <span class="n">src</span><span class="o">=</span><span class="n">src_value</span><span class="p">,</span>
                     <span class="n">dst</span><span class="o">=</span><span class="n">dst_value</span><span class="p">,</span>
                     <span class="n">src_item</span><span class="o">=</span><span class="n">src_item</span><span class="p">,</span>
                     <span class="n">dst_item</span><span class="o">=</span><span class="n">dst_item</span><span class="p">,</span>
                     <span class="n">nesting</span><span class="o">=</span><span class="n">nesting</span><span class="o">+</span><span class="mi">1</span><span class="p">)</span>
-            <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">src_value</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
-                <span class="n">next_src</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_list_to_dict</span><span class="p">(</span><span class="n">src_value</span><span class="p">)</span>
-                <span class="n">next_dst</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_list_to_dict</span><span class="p">(</span><span class="n">dst_value</span><span class="p">)</span>
+            <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">src_value</span><span class="p">,</span> <span class="p">(</span><span class="nb">list</span><span class="p">,</span> <span class="nb">dict</span><span class="p">))</span> <span class="ow">and</span> \
+                    <span class="nb">isinstance</span><span class="p">(</span><span class="n">dst_value</span><span class="p">,</span> <span class="p">(</span><span class="nb">list</span><span class="p">,</span> <span class="nb">dict</span><span class="p">)):</span>
+                <span class="n">next_src</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_nest_dicts</span><span class="p">(</span><span class="n">src_value</span><span class="p">)</span>
+                <span class="n">next_dst</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_nest_dicts</span><span class="p">(</span><span class="n">dst_value</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_compare_dicts</span><span class="p">(</span>
                     <span class="n">src</span><span class="o">=</span><span class="n">next_src</span><span class="p">,</span>
                     <span class="n">dst</span><span class="o">=</span><span class="n">next_dst</span><span class="p">,</span>
@@ -352,19 +353,35 @@
         <span class="k">return</span> <span class="n">src_value</span> <span class="o">==</span> <span class="n">dst_value</span>
 
     <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">_nest_dicts</span><span class="p">(</span><span class="n">list_or_dict</span><span class="p">):</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">list_or_dict</span><span class="p">,</span> <span class="nb">dict</span><span class="p">):</span>
+            <span class="k">return</span> <span class="p">{</span><span class="n">XmlCleaner</span><span class="o">.</span><span class="n">_choose_key</span><span class="p">(</span><span class="n">list_or_dict</span><span class="p">):</span> <span class="n">list_or_dict</span><span class="p">}</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">list_or_dict</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
+            <span class="k">return</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">_list_to_dict</span><span class="p">(</span><span class="n">list_or_dict</span><span class="p">)</span>
+        <span class="k">raise</span> <span class="ne">RuntimeError</span>
+
+    <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">_list_to_dict</span><span class="p">(</span><span class="n">list_to_convert</span><span class="p">):</span>
         <span class="n">dict_out</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span> <span class="n">list_to_convert</span><span class="p">:</span>
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">item</span><span class="p">,</span> <span class="n">OrderedDict</span><span class="p">):</span>
-                <span class="k">if</span> <span class="s1">&#39;@label&#39;</span> <span class="ow">in</span> <span class="n">item</span><span class="p">:</span>
-                    <span class="n">dict_out</span><span class="p">[</span><span class="n">item</span><span class="p">[</span><span class="s1">&#39;@label&#39;</span><span class="p">]]</span> <span class="o">=</span> <span class="n">item</span>
-                <span class="k">elif</span> <span class="s1">&#39;@ID&#39;</span> <span class="ow">in</span> <span class="n">item</span><span class="p">:</span>
-                    <span class="n">dict_out</span><span class="p">[</span><span class="n">item</span><span class="p">[</span><span class="s1">&#39;@ID&#39;</span><span class="p">]]</span> <span class="o">=</span> <span class="n">item</span>
-                <span class="k">else</span><span class="p">:</span>
-                    <span class="k">raise</span> <span class="ne">RuntimeError</span>
+                <span class="n">key</span> <span class="o">=</span> <span class="n">XmlCleaner</span><span class="o">.</span><span class="n">_choose_key</span><span class="p">(</span><span class="n">item</span><span class="p">)</span>
+                <span class="n">dict_out</span><span class="p">[</span><span class="n">key</span><span class="p">]</span> <span class="o">=</span> <span class="n">item</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="k">raise</span> <span class="ne">RuntimeError</span>
+                <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="s1">&#39;Unable to compare the XML data because the&#39;</span>
+                                   <span class="s1">&#39;structure was unexpected.&#39;</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">dict_out</span>
+
+    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">_choose_key</span><span class="p">(</span><span class="n">item</span><span class="p">):</span>
+        <span class="k">if</span> <span class="s1">&#39;@label&#39;</span> <span class="ow">in</span> <span class="n">item</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">item</span><span class="p">[</span><span class="s1">&#39;@label&#39;</span><span class="p">]</span>
+        <span class="k">if</span> <span class="s1">&#39;@ID&#39;</span> <span class="ow">in</span> <span class="n">item</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">item</span><span class="p">[</span><span class="s1">&#39;@ID&#39;</span><span class="p">]</span>
+        <span class="k">if</span> <span class="s1">&#39;@name&#39;</span> <span class="ow">in</span> <span class="n">item</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">item</span><span class="p">[</span><span class="s1">&#39;@name&#39;</span><span class="p">]</span>
+        <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="s1">&#39;Unable to compare the XML data because the&#39;</span>
+                           <span class="s1">&#39;dictionary did not contain a standard key.&#39;</span><span class="p">)</span>
 
 <div class="viewcode-block" id="XmlCleaner.add_tag_remaps"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">[docs]</a>    <span class="k">def</span> <span class="nf">add_tag_remaps</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_item</span><span class="p">,</span> <span class="n">dst_item</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
