--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -46,6 +46,7 @@
 <span class="kn">import</span> <span class="nn">abc</span>
 <span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">import</span> <span class="nn">re</span>
+<span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">time</span>
 <span class="kn">from</span> <span class="nn">enum</span> <span class="kn">import</span> <span class="n">Enum</span>
 
 <span class="kn">import</span> <span class="nn">pydicom</span>
@@ -585,7 +586,11 @@
                         <span class="nb">format</span><span class="p">(</span><span class="n">current_uid</span><span class="p">,</span> <span class="n">uid</span><span class="p">))</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s1">&#39;Setting Scan UID to </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">uid</span><span class="p">))</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">set_attribute</span><span class="p">(</span><span class="s1">&#39;UID&#39;</span><span class="p">,</span> <span class="n">uid</span><span class="p">)</span></div>
+                <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">set_attribute</span><span class="p">(</span><span class="s1">&#39;UID&#39;</span><span class="p">,</span> <span class="n">uid</span><span class="p">)</span>
+
+<div class="viewcode-block" id="XnatScan.post_create"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatScan.post_create">[docs]</a>    <span class="k">def</span> <span class="nf">post_create</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="c1"># Give XNAT a little buffer time to process the scan</span>
+        <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span></div></div>
 
 
 <div class="viewcode-block" id="XnatExperiment"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment">[docs]</a><span class="k">class</span> <span class="nc">XnatExperiment</span><span class="p">(</span><span class="n">XnatParentItem</span><span class="p">):</span>
