--- a/genindex.html
+++ b/genindex.html
@@ -1004,6 +1004,8 @@
       <ul>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.post_create">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatScan.post_create">(copyxnat.xnat.xnat_interface.XnatScan method)</a>
+</li>
       </ul></li>
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.print_results">print_results() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
 
@@ -1051,10 +1053,10 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.project_server_path">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.ProjectFailure">ProjectFailure</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.ProjectFailure">ProjectFailure</a>
+</li>
       <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync">ProjectRsync (class in copyxnat.utils.rsync)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
