--- a/_modules/copyxnat/xnat_backend/simple_xnat.html
+++ b/_modules/copyxnat/xnat_backend/simple_xnat.html
@@ -44,6 +44,7 @@
 
 <span class="kn">import</span> <span class="nn">abc</span>
 <span class="kn">import</span> <span class="nn">os</span>
+<span class="kn">import</span> <span class="nn">zipfile</span>
 
 <span class="kn">import</span> <span class="nn">six</span>
 
@@ -430,13 +431,44 @@
         <span class="k">if</span> <span class="ow">not</span> <span class="n">files</span><span class="p">:</span>
             <span class="k">return</span> <span class="kc">None</span>
 
-        <span class="n">file_path</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">save_dir</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_label</span><span class="p">()</span> <span class="o">+</span> <span class="s1">&#39;.zip&#39;</span><span class="p">)</span>
-        <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;WARNING: experimental ZIP file save - includes nested folders&quot;</span><span class="p">)</span>
+        <span class="c1"># Download the zip file from XNAT</span>
+        <span class="n">orig_zip_path</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">save_dir</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_label</span><span class="p">()</span> <span class="o">+</span> <span class="s1">&#39;_orig.zip&#39;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">rest_client</span><span class="o">.</span><span class="n">download_file</span><span class="p">(</span>
-            <span class="n">file_path</span><span class="o">=</span><span class="n">file_path</span><span class="p">,</span>
+            <span class="n">file_path</span><span class="o">=</span><span class="n">orig_zip_path</span><span class="p">,</span>
             <span class="n">uri</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">read_uri</span><span class="p">()</span> <span class="o">+</span> <span class="s1">&#39;/files&#39;</span><span class="p">,</span>
             <span class="n">qs_params</span><span class="o">=</span><span class="p">{</span><span class="s1">&#39;format&#39;</span><span class="p">:</span> <span class="s1">&#39;zip&#39;</span><span class="p">})</span>
-        <span class="k">return</span> <span class="n">file_path</span></div>
+
+        <span class="c1"># Remove the hierarchical folder structure from the downloaded zip file</span>
+        <span class="c1"># by repackiging into a new zip file</span>
+        <span class="n">new_zip_path</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">save_dir</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_label</span><span class="p">()</span> <span class="o">+</span> <span class="s1">&#39;.zip&#39;</span><span class="p">)</span>
+        <span class="k">with</span> <span class="n">zipfile</span><span class="o">.</span><span class="n">ZipFile</span><span class="p">(</span><span class="n">orig_zip_path</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">orig_zip</span><span class="p">:</span>
+            <span class="k">with</span> <span class="n">zipfile</span><span class="o">.</span><span class="n">ZipFile</span><span class="p">(</span><span class="n">new_zip_path</span><span class="p">,</span> <span class="s1">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">new_zip</span><span class="p">:</span>
+
+                <span class="c1"># Iterate through all files in the zip</span>
+                <span class="k">for</span> <span class="n">zip_info</span> <span class="ow">in</span> <span class="n">orig_zip</span><span class="o">.</span><span class="n">infolist</span><span class="p">():</span>
+
+                    <span class="c1"># Get the filename relative to the resource root</span>
+                    <span class="n">new_path</span> <span class="o">=</span> <span class="n">zip_info</span><span class="o">.</span><span class="n">filename</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;/files/&#39;</span><span class="p">,</span> <span class="mi">1</span><span class="p">)[</span><span class="mi">1</span><span class="p">]</span>
+
+                    <span class="c1"># Modify the destination filename to remove the path prefix</span>
+                    <span class="n">zip_info</span><span class="o">.</span><span class="n">filename</span> <span class="o">=</span> <span class="n">new_path</span>
+
+                    <span class="c1"># Extract out the file to the new destination</span>
+                    <span class="n">orig_zip</span><span class="o">.</span><span class="n">extract</span><span class="p">(</span><span class="n">member</span><span class="o">=</span><span class="n">zip_info</span><span class="p">,</span> <span class="n">path</span><span class="o">=</span><span class="n">save_dir</span><span class="p">)</span>
+                    <span class="n">extracted_file</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">save_dir</span><span class="p">,</span> <span class="n">new_path</span><span class="p">)</span>
+
+                    <span class="c1"># Add the extracted file to the new archive with the</span>
+                    <span class="n">new_zip</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">filename</span><span class="o">=</span><span class="n">extracted_file</span><span class="p">,</span>
+                                  <span class="n">arcname</span><span class="o">=</span><span class="n">new_path</span><span class="p">)</span>
+
+                    <span class="c1"># Delete the extracted file</span>
+                    <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">extracted_file</span><span class="p">)</span>
+
+        <span class="c1"># Delete the original zip file</span>
+        <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">orig_zip_path</span><span class="p">)</span>
+
+        <span class="c1"># Return path to the new zip file</span>
+        <span class="k">return</span> <span class="n">new_zip_path</span></div>
 
 <div class="viewcode-block" id="SimpleXnatResourceBase.resource_attributes"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase.resource_attributes">[docs]</a>    <span class="k">def</span> <span class="nf">resource_attributes</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Get dict or resource attributes&quot;&quot;&quot;</span>
